# risc0

examples/waldo/: Cargo.toml
examples/waldo/core/: Cargo.toml
examples/waldo/core/src/: __lib.rs  _lib.rs  image.rs  lib.rs  merkle.rs
examples/waldo/methods/guest/: Cargo.toml
examples/waldo/methods/guest/src/: main.rs
examples/waldo/src/: lib.rs  verify.rs
examples/wasm/: Cargo.toml
examples/wasm/methods/guest/: Cargo.toml
examples/wasm/methods/guest/src/: main.rs
risc0/circuit/rv32im/: Cargo.toml
risc0/core/: Cargo.toml
risc0/zkp/: Cargo.toml
risc0/zkp/src/: adapter.rs  lib.rs
risc0/zkp/src/core/hash/: mod.rs
risc0/zkp/src/core/hash/poseidon_254/: consts.rs  mod.rs
risc0/zkp/src/hal/: cpu.rs  mod.rs
risc0/zkp/src/prove/: accum.rs  adapter.rs  executor.rs  mod.rs  prover.rs
risc0/zkvm/: Cargo.toml
risc0/zkvm/src/: __lib.rs  lib.rs  opcode.rs
risc0/zkvm/src/binfmt/: elf.rs  image.rs  mod.rs
risc0/zkvm/src/exec/: mod.rs
risc0/zkvm/src/guest/: mod.rs
risc0/zkvm/src/ioexec/: mod.rs
risc0/zkvm/src/prove/: mod.rs
