[package]
name = "waldo"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
clap = { version = "4.0", features = ["derive"] }
env_logger = { version = "0.10", default-features = false}
image = { version = "0.24", git = "https://github.com/labormedia/image.git", branch = "fix-dependencies",default-features = false }
risc0-zkvm = { path = "../../risc0/zkvm", default-features = false, features = [ "binfmt" ] }
serde = { version = "1.0", default-features = false}
viuer = { version = "0.6", default-features = false}
waldo-core = { path = "core" }
waldo-methods = { path = "methods", optional = true }

[features]
cuda = ["risc0-zkvm/cuda"]
default = [ "minimal" ]
metal = ["risc0-zkvm/metal"]
minimal = [ "risc0-zkvm/binfmt" , "waldo-core/minimal"]