[package]
name = "risc0-core"
description = "Core types for RISC Zero crates"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[dependencies]
bytemuck = { version = "1.12", features = ["derive"] }
rand_core = {version = "0.5.1", default-features = false}

[dev-dependencies]
rand = { version = "0.8", features = ["small_rng"] }

[features]
std = []
