[package]
name = "waldo-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = {version="1.3", default-features = false}
bytemuck = {version="1.12", default-features = false}
divrem = {version="1.0", default-features = false}
elsa = {version="1.7", default-features = false}
image = { version = "0.24", git = "https://github.com/labormedia/image.git", branch = "fix-dependencies",default-features = false, optional = true }
merkle_light = {version="0.4", default-features = false}
merkle_light_derive = {version="0.4", default-features = false}
risc0-zkvm = { path = "../../../risc0/zkvm", default-features = false, features = [ "binfmt" ] }
serde = {version="1.0", default-features = false}

[dev-dependencies]
hex = {version="0.4", default-features = false}
rand = {version="0.8", default-features = false}
sha2 = {version="0.10", default-features = false}

[features]
default = [ "minimal" ]
minimal = []