[package]
name = "waldo-core"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#bincode = {version="1.3", default-features = false}
# replacing bincode by postcard
postcard = {version="1.0.0", features=["alloc"], default-features = false}
bytemuck = {version="1.12", default-features = false}
divrem = {version="1.0", default-features = false}
elsa = {version="1.7", default-features = false}
image = { version = "0.24", git = "https://github.com/labormedia/image.git", default-features = false, optional = true }
merkle_light = {version="0.4", default-features = false}
merkle_light_derive = {version="0.4", default-features = false}
risc0-zkvm = { version = "0.14.0", default-features = false, path = "../../../risc0/zkvm", features = [ "std" ] }
serde = {version="1.0", default-features = false, features = ["derive"]}

[dev-dependencies]
hex = {version="0.4", default-features = false}
rand = {version="0.8"}
rand_chacha = "0.3.1"
sha2 = {version="0.10", default-features = false}

[features]
default = [ ]
image = ["dep:image"]
minimal = []